# remesher

./: CMakeLists.txt  COPYING  FindGMM.cmake  FindGTKGLEXTMM.cmake  Makefile  Makefile.darwin  README  README.md  TODO
cgal/: CMakeLists.txt  Mesh.h  test.cpp
cmdremesher/: CMakeLists.txt  main.cc
gmm/: gmm_interface.h
gtkremesher/: CMakeLists.txt  Makefile  Makefile.dep  arguments.cc  arguments.h  gtkcomboboxcheck.cc  gtkcomboboxcheck.h  gtkconfig.cc  gtkconfig.h  gtkdefines.h  gtkmeshrendering.cc  gtkmeshrendering.h  gtkopengl.cc  gtkopengl.h  gtkwidgets.h  guiglinfo.cc  guiglinfo.h  imagestore.cc  imagestore.h  main.cc  maingui.cc  maingui.h  winbase.h
gtkremesher/images/: cam_simple.h  cam_trackball.h  invert_faces.h  lookat.h  meshinfo.h  scale_center.h
libglstuff/: CMakeLists.txt  Makefile  Makefile.dep  cameracontrol.cc  cameracontrol.h  camerarotate.cc  camerarotate.h  camerasimple.cc  camerasimple.h  cameratrackball.cc  cameratrackball.h  consolefont.h  fonttexture.cc  fonttexture.h  gldefines.h  gldrawable.h  glfeatureedges.cc  glfeatureedges.h  glfrustarenderer.cc  glfrustarenderer.h  glskybox.cc  glskybox.h  gltestscene.cc  gltestscene.h  gltriangledebug.cc  gltriangledebug.h  gltrianglemesh.cc  gltrianglemesh.h  texture.cc  texture.h
libremesh/: CMakeLists.txt  averageplane.cc  edgeflips.cc  featureedges.cc  featureedges.h  patch2d.cc  patch2d_fb.cc  relaxation.cc  resampling.cc
unused/: algorithm.h  curvaturefield.cc  curvaturefield.h  delaunay.cc  delaunay.h  delaunay3d.cc  delaunay3d.h  edgemesh.h  featureextract.cc  featureextract.h  fidelityflips.cc  fidelityflips.h  gldelaunay.cc  gldelaunay.h  gledgemesh.cc  gledgemesh.h  lloyd.cc  lloyd.h  lloyd3d.cc  lloyd3d.h  pttdist.cc  pttdist.h  test_threading.cc  test_triorder.cc  triangletrans.cc  triangletrans.h  vertexneighbours.cc  vertexneighbours.h
